--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,8 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
-gi
+spring.datasource.url=jdbc:h2:mem:testdb
 
 
 
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-spring.datasource.username=${JDBC_DATASOURCE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
+
